--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,18 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.github.niorgai:StatusBarCompat:1.1.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-    // required, enough for most devices.
-    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.9'
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.9'
-    // Other ABIs: optional
-    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.7.9'
-    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.7.9'
-    // ExoPlayer as IMediaPlayer: optional, experimental
-    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.9'
+    //    // required, enough for most devices.
+//    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.7.9'
+//    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.7.9'
+//    //    // Other ABIs: optional
+//    compile 'tv.danmaku.ijk.media:ijkplayer-armv5:0.7.9'
+//    compile 'tv.danmaku.ijk.media:ijkplayer-x86:0.7.9'
+//    //    // ExoPlayer as IMediaPlayer: optional, experimental
+//    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.9'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    //    compile 'com.shuyu:GSYVideoPlayer:1.6.4'
+    //弹幕
+    compile 'com.github.ctiao:DanmakuFlameMaster:0.8.0'
+    compile 'com.github.ctiao:ndkbitmap-armv7a:0.8.0'
+    compile project(':gsyVideoPlayer')
 }
