--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".work.vediolist.VedioListActivity">
+        <activity android:name=".ui.vediolist.VedioListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,9 +53,9 @@
             </intent-filter>
         </activity>
         <!--<activity android:name=".work.vediolist.VedioListActivity" />-->
-        <activity android:name=".work.room.RoomActivity"
-            android:screenOrientation="landscape"
-            />
+        <activity android:name=".ui.room.RoomActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
